# remote-access-tool

./: CMakeLists.txt  README.md
res/model/: c4_l1.puml  c4_l2.puml  c4_l3_c.puml  c4_l3_s.puml  c4_l4.puml  c4_sequence_download.puml  c4_sequence_kill_process.puml  c4_sequence_other.puml
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  process.cpp  process.hpp
src/common/: CMakeLists.txt  error.cpp  file_listing.cpp  file_listing.hpp  network.cpp  network.hpp  process_listing.cpp  process_listing.hpp  serializeable.cpp  serializeable.hpp  util.cpp  util.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
tests/: CMakeLists.txt
tests/e2e/: client_server_test.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  client_test.cpp  common_test.cpp  server_test.cpp
